style.scss
// normalize is here
@import "grid";
$gray: #A1ACB2;
html,
body {
    margin: 0;
    font-family: 'Droid Serif', serif;
}

body {
    background-color: #4D6E7F;
}

.wrapper {
    max-width: 940px;
    margin: 0 auto;
}


/* header */

header {
    background: url(../img/river.jpg) no-repeat center center;
    background-size: cover;
    text-align: center;
    height: 500px;
    color: #fff;
    padding-top: 100px;
    h2 {
        font-size: 3.2em;
        margin: 0;
        text-transform: uppercase;
        /* stroke from CSS tricks */
        text-shadow: 3px 3px 0 #000, /* Simulated effect for Firefox and Opera
           and nice enhancement for WebKit */
        -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
    }
}

@media screen and (min-width: 700px) {
    /* remember to change max/min 1024 */
    header {
        h2 {
            font-size: 5.6em;
        }
    }
}

nav {
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    z-index: 1000;
    width: 100%;
    background: rgba(0, 0, 0, .4);
    height: 4em;
    padding-left: 1em;
    a {
        text-decoration: none;
        color: #fff;
        display: block;
        padding: 8px 10px;
    }
    h1 {
        font-size: 1.2em;
        margin-left: 1.8em;
        margin-top: -31px;
        text-transform: uppercase;
    }
    h1 a:hover {
        display: inline-block;
        color: #fff;
        background-color: $gray;
        border-radius: 5px;
    }
    ul {
        margin-top: -0.2em;
        padding-left: 0;
        display: none;
        max-width: 200px;
        background-color: rgba(0, 0, 0, .5);
        text-align: center;
    }
    li {
        font-size: 1.2em;
        list-style: none;
    }
    li:hover {
        background-color: $gray;
        color: #000;
    }
    li:first-child {
        display: none;
    }
    .wrapper {
        margin-top: 1em;
    }
}

@media screen and (min-width: 700px) {
    /* remember to change max/min 1024 */
    nav {
        ul {
            margin-top: 0;
            text-align: left;
            display: block;
            max-width: initial;
            background-color: transparent;
        }
        h1,
        img,
        li:nth-child(2) {
            display: none;
        }
        li:first-child a {
            padding: 8px 10px;
        }
        li:first-child a:hover {
            background-color: $gray;
            border-radius: 5px;
        }
        a,
        li,
        li:first-child {
            display: inline;
        }
        li:first-child {
            text-transform: uppercase;
            font-weight: 600;
        }
        li:hover {
            background-color: transparent;
        }
    }
}

.btn {
    text-transform: uppercase;
    display: inline-block;
    margin-top: 20px;
    padding: 10px 30px;
    background-color: $gray;
    color: #fff;
    // maybe now inverting colors would be good
    // button doesnt look that great at start of port sect
    border: 1px solid transparent;
    text-decoration: none;
    border-radius: 5px;
    font-size: 1.1em;
}

.btn:hover,
.btn:focus {
    background-color: rgba(0, 0, 0, .5);
    color: #fff;
    border: 1px solid #fff;
    transition: all .3s ease-in-out;
}


/* all sections */

.projects:nth-child(4) {
    background-color: #9ADBFF;
    color: #4D6E7F;


    .project a:last-child {
        color: #000;
    }
}

.location,
.intro {
    padding-top: 50px;
    img {
        padding: 0 20px;
    }
}

section {
    color: #fff;
    padding-bottom: 40px;
    h2 {
        text-align: center;
    }
    img {
        margin-left: auto;
        margin-right: auto;
        @extend .img-responsive;
    }
    p {
        font-size: 1.23em;
    }
    .author-intro,
    .author-location,
    .project-row {
        @extend .row;
    }
    .intro-image {
        @extend .col-md-4;
    }
    .location-image {
        @extend .col-md-3;
    }
    .intro-text {
        @extend .col-md-8;
    }
    .intro-text p,
    .location-text p {
        margin: 0 auto;
        padding: 0 15px;
    }
    .location-text {
        @extend .col-md-9;
    }
@media screen and (min-width: 700px) {
    /* remember to change max/min 1024 */
    .intro-text p,
    .location-text p {
        width: 90%;
        padding: 0;
    }
}
}


@media screen and (min-width: 1024px) {
    /* remember to change max/min 1024 */
    section {
        height: 300px;
        padding-bottom: 0;
        h2 {
            text-align: start;
            font-size: 1.7em;
        }
        p {
            padding: 0;
        }
        .intro-text {
            padding-left: 30px;
        }
        .intro-text p,
        .location-text p {
            float: left;
        }
    }
}


/* 1st section*/

.intro {
    img {
        border-radius: 100%;
    }
}


/* 2nd section */

.location .wrapper {
    // padding-bottom: 70px;
    // border-bottom: 1px solid #eee;
    img {
        margin-top: 35px;
    }
}

@media screen and (min-width: 1024px) {
    /* remember to change max/min 1024 */
    .location img {
        margin: 0;
    }
}

// portfolio section
.projects:nth-child(3) {
    background-color: #9ADBFF;
    color: #4D6E7F;
    padding-top: 1.5em;
    h2 {
        padding: 0 0 5px;
        margin-bottom: 0;
    }

    p {
        padding: 0 15px;
    }

    .project a:last-child {
        color: #000;
    }
}

.btn-row {
    @extend .row;
    text-align: center;

}

.projects:nth-child(2) {
    padding-bottom: 2em;

    .col-md-6 {
        margin-bottom: 1em;
    }
}

.projects {
    height: auto;
    @media screen and (min-width: 700px) {
        /* remember to change max/min 1024 */
        p {
            width: 500px;
        }
    }
    .project {
        @extend .col-md-6;
        a:last-child {
            margin-top: 1em;
            display: inline-block;
            font-size: 1.2em;
            color: #9ADBFF;
        }
        p {
            width: auto;
            margin-bottom: -10px;
        }
    }
    h2 {
        padding-top: 50px;
        text-align: center;
    }
    p {
        text-align: center;
        margin: 10px auto;
        font-size: 1.23em;
    }
    .col-md-6 {
        margin-bottom: 1em;
        padding: 0 30px;
        text-align: center;
    }
    @media screen and (min-width: 1024px) {
        /* remember to change max/min 1024 */
        .col-md-6 {
            padding: 0 15px;
        }
    }
    .wrapper {
        margin-top: 0;
    }
    img {
        border: 1px solid #000;
    }
}

@media screen and (min-width: 1024px) {
    /* remember to change max/min 1024 */
    .projects {
        padding-bottom: 50px;
    }
}


/* footer */

footer {
    height: 120px;
    background-color: #000;
    color: #fff;
    text-align: center;
    img {
        width: 80px;
    }
    .wrapper {
        padding-top: 20px;
    }
    ul {
        padding: 0;
        margin: 0 auto;
    }
    li {
        display: inline;
        padding: 28px 5px;
    }
    a {
        padding: 51px 5px 53px;
    }
    a:hover,
    a:focus {
        background-color: $gray;
        transition: background-color .7s;
    }
}

.opaque {
    opacity: 0.6;
}

